# geomlib

./: .gitignore  CMakeLists.txt  README.md
doc/: Doxyfile.in
include/: geometry.hpp  vector3d.hpp
test-src/: CMakeLists.txt  test_geometry_dblprec.cpp  test_geometry_multiprec.cpp  test_vector3d_dblprec.cpp  test_vector3d_multiprec.cpp
